--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +53,64 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using linspace and arange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2.3       , 2.98181818, 3.66363636, 4.34545455, 5.02727273,\n",
+       "        5.70909091, 6.39090909, 7.07272727, 7.75454545, 8.43636364,\n",
+       "        9.11818182, 9.8       ]),\n",
+       " 0.6818181818181819)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.linspace( start , stop , num=50(samples) , endpoint = True ,  retstep = False  ,  dtype = None , axis = 0)\n",
+    "np.linspace(2.3 , 9.8 , 12 , retstep = True  , axis = 0)  # returns evenly spaced samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.2, 8.2])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(3.2 , 9.7 , 5)"
    ]
   },
   {
@@ -1403,7 +1454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
